<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_operation_type_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/main_operation_type"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_operation_title_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/main_operation_type_layout"
        app:layout_constraintBottom_toTopOf="@id/main_operation_amount_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_operation_text_annual">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_operation_title"
            android:hint="@string/title"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/main_operation_text_income"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/income"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/main_operation_title_layout"
        app:layout_constraintEnd_toStartOf="@id/main_operation_income_or_outcome"
        app:layout_constraintTop_toTopOf="@id/main_operation_title_layout"
        app:layout_constraintBottom_toBottomOf="@id/main_operation_title_layout"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/main_operation_income_or_outcome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/main_operation_text_income"
        app:layout_constraintEnd_toStartOf="@id/main_operation_text_outcome"
        app:layout_constraintTop_toTopOf="@id/main_operation_title_layout"
        app:layout_constraintBottom_toBottomOf="@id/main_operation_title_layout"/>

    <TextView
        android:id="@+id/main_operation_text_outcome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginEnd="8dp"
        android:text="@string/outcome"
        app:layout_constraintStart_toEndOf="@id/main_operation_income_or_outcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_operation_title_layout"
        app:layout_constraintBottom_toBottomOf="@id/main_operation_title_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_operation_amount_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/main_operation_title_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_operation_text_annual">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_operation_amount"
            android:hint="@string/amount"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/main_operation_text_annual"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/annual"
        app:layout_constraintStart_toEndOf="@id/main_operation_amount_layout"
        app:layout_constraintEnd_toStartOf="@id/main_operation_annual_or_monthly"
        app:layout_constraintTop_toTopOf="@id/main_operation_amount_layout"
        app:layout_constraintBottom_toBottomOf="@id/main_operation_amount_layout"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/main_operation_annual_or_monthly"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/main_operation_text_annual"
        app:layout_constraintEnd_toStartOf="@id/main_operation_text_monthly"
        app:layout_constraintTop_toTopOf="@id/main_operation_amount_layout"
        app:layout_constraintBottom_toBottomOf="@id/main_operation_amount_layout"/>

    <TextView
        android:id="@+id/main_operation_text_monthly"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginEnd="4dp"
        android:text="@string/monthly"
        app:layout_constraintStart_toEndOf="@id/main_operation_annual_or_monthly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_operation_amount_layout"
        app:layout_constraintBottom_toBottomOf="@id/main_operation_amount_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>